Bug 1428052 - security bugs always have the vertical scrollbar outside of area visible by default (overflow on the right)

--- a/skins/standard/bug_groups.css
+++ b/skins/standard/bug_groups.css
@@ -2,8 +2,6 @@
 
 body[class*=bz_group_] {
     background-color: #e0e0ff;
-    border-left: solid red 2px;
-    padding-left: 13px;
 }
 
 body[class*=bz_group_] #bugzilla-body {
